--- a/index.html
+++ b/index.html
@@ -7,47 +7,49 @@
 
 </head>
 <body>
-    <h1>Olá, Viajante!</h1>
+    <!-- <h1 id="tittle">Eu vou ser substituído</h1> -->
+    <script>
+      
+    </script>
+    <!-- <button></button> -->
+    <h1>Olá, viajante!</h1>
     <h2>Vamos jogar um jogo...</h2>
-    <h3>Pensa num número entre <span id="minNum"></span> e <span
-    id="maxNum"></span></h3>
-    <h3>Eu acho que o número que pensaste foi: <span id="numero">
-    </span></h3>
+    <h3>Pensa num número entre <span id="minNum"></span> e <span id="maxNum"></span></h3>
     <hr>
-    <h3>O número é: </h3>
-    <button on click="maior()">É maior!</button>
-    <button on click="menor()">É menor!</button>
-    <button on click="acertou()">É esse!</button>
-    </hr>
+    <h3>O número é:<span id= "tentativa"></span></h3> 
+    <button onclick="maior()">É maior!</button>
+    <button onclick="menor()">É menor!</button>
+    <button onclick="acertou()">É esse!</button>
+    <hr>
     <h1 id="genio"></h1>
-
 
     <script>
         var minNum = 0;
         var maxNum = 100;
-        var tentativa = Math.round(minNum + maxNum) / 2);
+        var tentativa = Math.round((minNum + maxNum) / 2);
 
         document.getElementById("minNum").innerHTML = minNum;
         document.getElementById("maxNum").innerHTML = maxNum;
-
+        document.getElementById("tentativa").innerHTML = tentativa;
         var maior = function()
         {
-            //o que acontece se o jogador pressionar "É maior..."
-            minNum = (minNum + maxNum) / 2;
+            minNum = tentativa;
+            attempt();
+            document.getElementById("tentativa").innerHTML = tentativa;
         }
-
         var menor = function()
         {
-            //o que acontece se o jogador pressionar "É menor..."
-            maxNum = (minNum + maxNum) / 2;
+            maxNum = tentativa;
+            attempt();
+            document.getElementById("tentativa").innerHTML = tentativa;
         }
-
-        var aceertou = function()
+        var acertou = function()
         {
-            //o que acontece se o jogador pressionar "É esse...."
             document.getElementById("genio").innerHTML = "SOU UM GÉNIO!";
         }
 
+        function attempt()
+        {
+            tentativa = Math.round((minNum + maxNum) / 2);
+        }
     </script>
-</body>
-</html>
